--- a/src/SCSS/App.scss
+++ b/src/SCSS/App.scss
@@ -29,6 +29,8 @@ body {
   padding: 40px;
 }
 .note {
+  display: flex;
+  justify-content: space-between;
   font-weight: bold;
   color: $blue;
   padding: 40px;
@@ -65,6 +67,18 @@ body {
   transition: transform 0.06s ease;
 }
 .btn:hover {
+  transform: scale(1.2);
+}
+.btn-dell {
+  display: block;
+  background: red;
+  border-radius: 37px;
+  color: #e9e9e9;
+  font-weight: bold;
+
+}
+
+.btn-dell:hover {
   transform: scale(1.2);
 }
 .textInput {
